fixed div overflow issue

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ html, body {
 }
 
 #main-container {
-  height: 100%;
+  min-height: 100%;
   border: 1px solid blue;
   display: flex;
   flex-direction: column;
@@ -103,13 +103,13 @@ html, body {
 }
 
 .view-controls {
-	text-align: center;
-	flex: 1;
-	height: 300px;
+  text-align: center;
+  flex: 1;
+  height: 300px;
   overflow: auto;
   padding: 10px;
-	background-color: var(--ter-accent-col);
-	border-radius: 15px;
+  background-color: var(--ter-accent-col);
+  border-radius: 15px;
   border: 1px solid var(--sec-accent-col);
   margin: 5px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
